dev code change push
containg -
before reorder code

--- a/assets/theme.js.liquid
+++ b/assets/theme.js.liquid
@@ -544,7 +544,7 @@ theme.Product = (function() {
       cache.$productImageGallery.magnificPopup({
         type: 'image',
         mainClass: 'mfp-fade',
-        closeOnBgClick: true,
+        closeOnBgClick: false,
         closeBtnInside: false,
         closeOnContentClick: true,
         tClose: theme.strings.zoomClose,
