--- a/snippets/site-nav-fs.liquid
+++ b/snippets/site-nav-fs.liquid
@@ -5,35 +5,35 @@
   {% if customer.tags contains region_NorthEast %}
     {% assign customer_region_tag = region_NorthEast %}
     {% comment %}{% assign Mkt_list = 'Spanish' |split:',' %}{% endcomment %}
-	{% assign Mkt_list = "general.Region_Market_Names.NorthEast" | t |split:',' %}
+  {% assign Mkt_list = "general.Region_Market_Names.NorthEast" | t |split:',' %}
   {% elsif customer.tags contains region_SouthEast %}
     {% assign customer_region_tag = region_SouthEast %}
     {% comment %}{% assign Mkt_list = 'Atlanta Market,Georgia,South Florida and Central Florida,Carolinas,Georgia,North Florida,Central Florida' |split:',' %}{% endcomment %}
-	{% assign Mkt_list = "general.Region_Market_Names.SouthEast" | t |split:',' %}
+  {% assign Mkt_list = "general.Region_Market_Names.SouthEast" | t |split:',' %}
   {% elsif customer.tags contains region_California %}
     {% assign customer_region_tag = region_California %}
     {% comment %}{% assign Mkt_list = 'Spanish' |split:',' %}{% endcomment %}
-	{% assign Mkt_list = "general.Region_Market_Names.California" | t |split:',' %}
+  {% assign Mkt_list = "general.Region_Market_Names.California" | t |split:',' %}
   {% elsif customer.tags contains region_South %}
     {% assign customer_region_tag = region_South %}
     {% comment %}{% assign Mkt_list = 'New Mexico West Texas,Texas' |split:',' %}{% endcomment %}
-	{% assign Mkt_list = "general.Region_Market_Names.South" | t |split:',' %}
+  {% assign Mkt_list = "general.Region_Market_Names.South" | t |split:',' %}
   {% elsif customer.tags contains region_Mountain %}
     {% assign customer_region_tag = region_Mountain %}
     {% comment %}{% assign Mkt_list = 'Alaska,Arizona,Colorado,Idaho,Oregon,Utah,Washington,Hawaii,New Mexico West Texas' |split:',' %}{% endcomment %}
-	{% assign Mkt_list = "general.Region_Market_Names.Mountain" | t |split:',' %}
+  {% assign Mkt_list = "general.Region_Market_Names.Mountain" | t |split:',' %}
   {% elsif customer.tags contains region_MidAtlantic %}
     {% assign customer_region_tag = region_MidAtlantic %}
     {% comment %}{% assign Mkt_list = 'Spanish' |split:',' %}{% endcomment %}
-	{% assign Mkt_list = "general.Region_Market_Names.MidAtlantic" | t |split:',' %}
+  {% assign Mkt_list = "general.Region_Market_Names.MidAtlantic" | t |split:',' %}
   {% elsif customer.tags contains region_MidWest %}
     {% assign customer_region_tag = region_MidWest %}
     {% comment %}{% assign Mkt_list = 'Chicago,Wisconsin,Dakotas' |split:',' %}{% endcomment %}
-	{% assign Mkt_list = "general.Region_Market_Names.MidWest" | t |split:',' %}
+  {% assign Mkt_list = "general.Region_Market_Names.MidWest" | t |split:',' %}
   {% elsif customer.tags contains region_GreatLakes %}
     {% assign customer_region_tag = region_GreatLakes %}
     {% comment %}{% assign Mkt_list = 'Spanish' |split:',' %}{% endcomment %}
-	{% assign Mkt_list = "general.Region_Market_Names.GreatLakes" | t |split:',' %}
+  {% assign Mkt_list = "general.Region_Market_Names.GreatLakes" | t |split:',' %}
   {% endif %}
 
 {% endif %}
@@ -58,7 +58,7 @@
 {% assign tag_array = '' %}
 {% if collection %}
   {% for tag in collection.all_tags %}
-  	{% assign tag_array = tag_array |append:','|append: tag %}
+    {% assign tag_array = tag_array |append:','|append: tag %}
   {% endfor %}
 {% else %}
 {% for collection in collections %}
@@ -96,9 +96,9 @@ console.log('no');
 
 <ul class="site-nav" role="navigation" id="AccessibleNav" style="{% if customer_role_tag == Role_Designer %}display:none;{% endif %}">
 
-  <li {% if link.active %}class="site-nav--active"{% endif %}>
+<!--   <li {% if link.active %}class="site-nav--active"{% endif %}>
     <a id="link-new" href="/collections/{{ collection_handle }}?sort_by=created-descending" class="site-nav__link">New!</a>
-  </li>
+  </li> -->
 
   {% for link in site-nav-fs.links %}
     {% comment %}
@@ -107,7 +107,10 @@ console.log('no');
       More info on dropdowns:
         - http://docs.shopify.com/manual/your-website/navigation/create-drop-down-menu
     {% endcomment %}
+    
+    {% unless forloop.first %}
     <span class="h3" style="border-left: 1.5px solid black;"></span>
+    {% endunless %}
     {% assign child_list_handle = link.title | handleize %}
     {% if linklists[child_list_handle].links != blank %}
       {% capture primary_index %}{{ forloop.index }}{% endcapture %}
@@ -123,7 +126,7 @@ console.log('no');
             {% assign childlink_handle = childlink.url |split:'/' %}
             {% comment %}<script>console.log("handlers : {{ childlink.handle }} - {{ childlink_handle.last }}");</script>{% endcomment %}
 
-          	{% assign grand_child_list_handle = childlink.title | handle %}
+            {% assign grand_child_list_handle = childlink.title | handle %}
             {% if linklists[grand_child_list_handle].links != blank %}
               {% if childlink.handle == 'speciality' %}
                 <li class="site-nav--has-dropdown{% if current_tags contains childlink.handle %} site-nav--active{% endif %}" style="position:relative;" aria-haspopup="true" onclick="$('#speciality-ul').toggle();" onmouseout="document.getElementById('speciality-ul').style.display = 'none';">
@@ -189,7 +192,7 @@ console.log('no');
               {% endif %}
 
               {% if childlink.handle == 'pos-university' %}
-          		<li class="site-nav--has-dropdown{% if current_tags contains link.handle %} site-nav--active{% endif %}" style="position:relative;" aria-haspopup="true" onclick="$('#pos-ul').toggle();" onmouseout="document.getElementById('pos-ul').style.display = 'none';">
+              <li class="site-nav--has-dropdown{% if current_tags contains link.handle %} site-nav--active{% endif %}" style="position:relative;" aria-haspopup="true" onclick="$('#pos-ul').toggle();" onmouseout="document.getElementById('pos-ul').style.display = 'none';">
                   <a id="link-pos-university" hrefs="/pages/{{ childlink.handle }}" class="{% if current_tags contains childlink.handle %} site-nav--active {% endif %} site-nav__link">
                     {{ childlink.title | escape }}
                       <span class="icon-fallback-text">
@@ -224,32 +227,34 @@ console.log('no');
                   </ul>
                 </li>
               {% endif %}
-          	{% endif %}
+            {% endif %}
 
-          	{% if true or tag_array contains childlink_handle.last and linklists[grand_child_list_handle].links == blank %}
-          		{% if link_handle == 'market-specific' and Mkt_list contains childlink.title %}
+
+            {% if childlink.title == 'Contact Us' or childlink.title == 'Payment Codes' %}
+              <li>
+                <a id="link-contact" href="{{ childlink.url }}" class="{% if current_tags contains childlink.handle %} site-nav--active {% endif %} site-nav__link">{{ childlink.title | escape }}</a>
+              </li>
+              {% continue %}
+            {% endif %}
+          
+            {% if true or tag_array contains childlink_handle.last and linklists[grand_child_list_handle].links == blank %}
+              {% if link_handle == 'market-specific' and Mkt_list contains childlink.title %}
                   <li>
                     <a href="/collections/{{ collection_handle }}/{{ childlink_handle.last |handle}}{{ sort_url_params }}" class="{% if current_tags contains childlink_handle.last %} site-nav--active {% endif %} site-nav__link">{{ childlink.title | escape |remove:'PTT' |remove:'MKT' |remove:'AS:' |remove:'PR:' |remove:'SP:' |remove:'DPT:'}}</a>
                   </li>
-          		{% else %}
+              {% else %}
                   <li>
                     <a href="/collections/{{ collection_handle }}/{{ childlink_handle.last | downcase}}{{ sort_url_params }}" class="{% if current_tags contains childlink_handle.last %} site-nav--active {% endif %} site-nav__link">{{ childlink.title | escape |remove:'PTT' |remove:'MKT' |remove:'AS:' |remove:'PR:' |remove:'SP:' |remove:'DPT:'}}</a>
                   </li>
                   {% comment %}Sub menu item{% endcomment %}
-          		{% endif %}
-          	{% endif %}
-
-          	{% if childlink.title == 'Contact Us' and false %}
-              <li>
-                <a id="link-contact" href="/pages/{{ childlink.handle }}{% if customer %}{% unless customer.tags contains Role_Admin %}{{ customer_region_tag |prepend:'-' | remove: 'Region:' |replace:'0','o' | downcase }}{% endunless %}{% endif %}" class="{% if current_tags contains childlink.handle %} site-nav--active {% endif %} site-nav__link">{{ childlink.title | escape }}</a>
-              </li>
+              {% endif %}
             {% endif %}
 
-          	{% if childlink.title == 'Payment Codes' and false %}
+            {% if childlink.title == 'Payment Codes' and false %}
               <li class="site-nav--has-dropdown{% if current_tags contains link.handle %} site-nav--active{% endif %}" style="position:relative;" aria-haspopup="true" onclick="$('#payment-codes-ul').toggle();" onmouseout="document.getElementById('payment-codes-ul').style.display = 'none';">
                 <a id="link-payment-codes" hrefs="/pages/{{ childlink.handle }}" class="{% if current_tags contains childlink.handle %} site-nav--active {% endif %} site-nav__link">
                   {{ childlink.title | escape }}
-                	<span class="icon-fallback-text">
+                  <span class="icon-fallback-text">
                       <span class="icon icon-arrow-down" aria-hidden="true"></span>
                     </span>
                 </a>
@@ -272,7 +277,7 @@ console.log('no');
               <li class="site-nav--has-dropdown{% if current_tags contains link.handle %} site-nav--active{% endif %}" style="position:relative;" aria-haspopup="true" onclick="$('#pos-ul').toggle();" onmouseout="document.getElementById('pos-ul').style.display = 'none';">
                 <a id="link-pos-university" hrefs="/pages/{{ childlink.handle }}" class="{% if current_tags contains childlink.handle %} site-nav--active {% endif %} site-nav__link">
                   {{ childlink.title | escape }}
-                	<span class="icon-fallback-text">
+                  <span class="icon-fallback-text">
                       <span class="icon icon-arrow-down" aria-hidden="true"></span>
                     </span>
                 </a>
@@ -319,14 +324,14 @@ console.log('no');
 
     $(document).ready(function(){
       {% if customer.tags contains Role_Printer %}
-      	$('#AccessibleNav').block({message:'', overlayCSS: { backgroundColor: 'white', cursor: 'not-allowed'} });
+        $('#AccessibleNav').block({message:'', overlayCSS: { backgroundColor: 'white', cursor: 'not-allowed'} });
       {% endif %}
 
       {% if active == true %}
-     	 $('#link{{ active_index }}').addClass('site-nav--active');
+       $('#link{{ active_index }}').addClass('site-nav--active');
       {% endif %}
 
-//       $('.site-nav__dropdown').css('max-height', (window.innerHeight-60)+"px !important");
+      // $('.site-nav__dropdown').css('max-height', (window.innerHeight-60)+"px !important");
     });
 
 </script>
