--- a/assets/custom-style.css.liquid
+++ b/assets/custom-style.css.liquid
@@ -58,31 +58,31 @@
 .blockUI{z-index:2000 !important;}
 
 #AccessibleNav .blockUI{
-	z-index:1000 !important;
+  z-index:1000 !important;
 }
 
 #AccessibleNav.site-nav{margin-top:0px !important;}
 
 .w3-pagination .disabled .current{
-	cursor: not-allowed;
-  	/*background-color: #ccc;*/
-  	color: grey;
+  cursor: not-allowed;
+    /*background-color: #ccc;*/
+    color: grey;
 }
 
 .w3-pagination .active .current{
-	cursor: default;
-  	background-color: {{ settings.color_primary }};
-  	color: white;
+  cursor: default;
+    background-color: {{ settings.color_primary }};
+    color: white;
 }
 
 .pagination-custom .active span{
-	background-color:lightgrey;
+  background-color:lightgrey;
 }
 
 .success-custom-color{
-	background-color: white !important;
-  	color: {{ settings.color_primary }} !important;
-   	border: 2px solid {{ settings.color_primary }} !important;
+  background-color: white !important;
+    color: {{ settings.color_primary }} !important;
+    border: 2px solid {{ settings.color_primary }} !important;
 }
 
 a, a:active, a:focus{
@@ -116,11 +116,11 @@ th,td,input,select,li,p,span{ font-size: 14px !important; }
 }
 
 .w3-shadow{
-	box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2), 0 3px 5px 0 rgba(0, 0, 0, 0.19) !important; 
+  box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2), 0 3px 5px 0 rgba(0, 0, 0, 0.19) !important; 
 }
 .border{
-	border: 1px lightgray solid;
-  	border-radius: 2px;
+  border: 1px lightgray solid;
+    border-radius: 2px;
 }
 
 #AccessibleNav .site-nav__link{ 
@@ -128,58 +128,60 @@ th,td,input,select,li,p,span{ font-size: 14px !important; }
 }
 
 #AddToCartForm button:not(.fstChoiceRemove), #AddToCartForm select, #AddToCartForm input:not(.fstQueryInput), #AddToCartForm textarea{
-	width:100% !important;
+  width:100% !important;
 }
 [data-option-name^='window-'] {max-width: 50% !important;}
 #sec_nav{position: static;}
 
 @media (min-width: 936px){
   
-	#AddToCartForm button:not(.fstChoiceRemove), #AddToCartForm select, #AddToCartForm input:not(.fstQueryInput), #AddToCartForm textarea, #AddToCartForm .note, #AddToCartForm .w3-row{
+  #AddToCartForm button:not(.fstChoiceRemove), #AddToCartForm select, #AddToCartForm input:not(.fstQueryInput), #AddToCartForm textarea, #AddToCartForm .note, #AddToCartForm .w3-row{
         width:70% !important;
     }
   
-  	[data-option-name^='window-'] {max-width: 50% !important;}
+    [data-option-name^='window-'] {max-width: 50% !important;}
   
-  	#sec_nav, #nav-1{position: relative;}
+    #sec_nav, #nav-1{position: relative;}
   
-  	.site-nav2-fixed{
-        top:45px;
+    .site-nav2-fixed{
+        top: 57px;
         position:fixed !important;
         width:100%;
+        height: 55px;
+        padding-top: 4px;
         left: 0;
         z-index:100;
-      	background-color: white;
-    /*       	box-shadow: 0px 0px 2px 1px gray; transition: box-shadow 0.3s ease; */
+        background-color: white;
+    /*        box-shadow: 0px 0px 2px 1px gray; transition: box-shadow 0.3s ease; */
     }
   
-  	.site-nav-fixed{
-        top:92px;
+    .site-nav-fixed{
+        top: 112px;
         position:fixed !important;
         width:100%;
         left: 0;
         z-index:100;
-      	background-color: white;
+        background-color: white;
         /*box-shadow: 0 5px 5px -5px #333; */
-        box-shadow: 0 1px 3px 0 rgba(63,63,68,.15);
+        box-shadow: 0 3px 3px -2px rgba(63,63,68,.15);
         transition: box-shadow 0.3s ease;
     }
   
-  	.site-nav3-fixed{
-        top:45px;
+    .site-nav3-fixed{
+        top: 57px;
         position:fixed !important;
         width:100%;
         left: 0;
-      	padding:0 200px;
+        padding:0 200px;
         z-index:100;
-      	background-color: white;
+        background-color: white;
         /*box-shadow: 0 5px 5px -5px #333; */
         box-shadow: 0 2px 2px 0 rgba(63,63,68,.15);
         transition: box-shadow 0.3s ease;
     }
 
     .site-nav4-fixed{
-        top:94px;
+        top: 112px;
         position:fixed !important;
         width:100%;
         left: 0;
@@ -193,7 +195,7 @@ th,td,input,select,li,p,span{ font-size: 14px !important; }
     }
 
     .site-nav5-fixed{
-        top:45px;
+        top: 57px;
         position:fixed !important;
         width:100%;
         /*left: 0;*/
@@ -202,10 +204,10 @@ th,td,input,select,li,p,span{ font-size: 14px !important; }
     /*        box-shadow: 0px 0px 2px 1px gray; transition: box-shadow 0.3s ease; */
     }
    
-  	.logo-fixed{
-    	top:46px;
+    .logo-fixed{
+      top: 58px;
         position:fixed !important;
-      	z-index:1040 !important;
+        z-index:1040 !important;
     }
 
     .logo-fixed-fs{
@@ -226,11 +228,11 @@ th,td,input,select,li,p,span{ font-size: 14px !important; }
 div ul li label{ display:inline !important; }
 
 .btn-custom{
-	text-transform:lowercase !important;
-  	padding:4px 8px !important;
-  	font-weight: normal !important;
-  	background-color: #aaa !important;
-  	
+  text-transform:lowercase !important;
+    padding:4px 8px !important;
+    font-weight: normal !important;
+    background-color: #aaa !important;
+    
 }
 
 .grid-link__image-centered{ vertical-align: top; }
@@ -239,7 +241,7 @@ div ul li label{ display:inline !important; }
     position: absolute;
     top: 30%;
     left: 50%;
-  	-webkit-transform: translate(-50%, -75%);
+    -webkit-transform: translate(-50%, -75%);
     -ms-transform: translate(-50%, -75%);
     transform: translate(-50%, -75%);
 }
@@ -254,11 +256,11 @@ div ul li label{ display:inline !important; }
 }
 
 /* @media (min-width: 1240px){
-	.mfp-iframe-holder .mfp-content{ max-width: 1000px !important; }
+  .mfp-iframe-holder .mfp-content{ max-width: 1000px !important; }
 }
 
 @media (min-width: 1360px){
-	.mfp-iframe-holder .mfp-content{ max-width: 1240px !important; }
+  .mfp-iframe-holder .mfp-content{ max-width: 1240px !important; }
 } */
 
 *[my-title]{
@@ -284,9 +286,18 @@ div ul li label{ display:inline !important; }
     background-image: -webkit-linear-gradient(top, #ffffff, #ffffff);
     background-image: -moz-linear-gradient(top, #ffffff, #ffffff);
     background-image: -ms-linear-gradient(top, #eeeeee, #cccccc);
-    background-image: -o-linear-gradient(top, #eeeeee, #cccccc);	
+    background-image: -o-linear-gradient(top, #eeeeee, #cccccc);  
 }
 
+*[my-title].small.center:hover:after{
+  background-color: #1a1a1a;
+  background-image: unset !important;
+  color: #fff;
+/*   -webkit-transform: translateX(-50%); */
+/*   transform: translateX(-50%); */
+  left: 50%;
+  font-size: 12px;
+}
 
 /* 
 
@@ -338,8 +349,8 @@ div ul li label{ display:inline !important; }
 
 .checkbox-custom-label, .radio-custom-label {
     position: relative !important;
-  	border:none !important;
-  	outline:none !important;
+    border:none !important;
+    outline:none !important;
 }
 
 .checkbox-custom + .checkbox-custom-label:before, .radio-custom + .radio-custom-label:before {
@@ -350,7 +361,7 @@ div ul li label{ display:inline !important; }
     vertical-align: middle;
     width: 20px;
     height: 20px;
-  	top:50%;
+    top:50%;
     padding: 2px;
 /*     margin-right: 10px; */
     text-align: center;
@@ -361,8 +372,8 @@ div ul li label{ display:inline !important; }
     font-family: 'FontAwesome';
     background: {{ settings.color_primary }};
     color: #fff;
-	vertical-align: top;
-  	line-height:8px;
+  vertical-align: top;
+    line-height:8px;
 }
 
 .radio-custom + .radio-custom-label:before {
@@ -384,17 +395,17 @@ div ul li label{ display:inline !important; }
 .btn-group button, .cross-btn {
     background-color: transparent !important; /* Green background */
     border: 1px solid transparent !important; /* Green border */
-  	outline: none !important;
-  	font-size:19px !important;
+    outline: none !important;
+    font-size:19px !important;
     color: grey; /* White text */
     padding: 2px; /* Some padding */
     cursor: pointer; /* Pointer/hand icon */
     width: 15px !important; /* Set a width if needed */
-  	height: 15px !important;
+    height: 15px !important;
     display: block; /* Make the buttons appear below each other */
-  	position: relative;
-  	line-height:1 !important;
-/*   	vertical-align:middle; */
+    position: relative;
+    line-height:1 !important;
+/*    vertical-align:middle; */
 }
 
 @-moz-document url-prefix() { 
@@ -418,8 +429,8 @@ div ul li label{ display:inline !important; }
 }
 
 #order-list tr > th, #order-list tr > td {
-	vertical-align:middle !important;
-  	padding:3px 3px !important;
+  vertical-align:middle !important;
+    padding:3px 3px !important;
 }
 
 #order-list tr > td { padding:5px 5px !important; }
@@ -438,7 +449,7 @@ div ul li label{ display:inline !important; }
     cursor:pointer;
     font-family:inherit;
     font-size:inherit;
-  	outline: none !important;
+    outline: none !important;
 }
 
 /*FS CSS*/
@@ -446,10 +457,12 @@ div ul li label{ display:inline !important; }
 [order_status^="Needs"],[order_status$="Needed"]{ color: #f37900 !important; font-weight: bold; }
 [order_status="Fulfilled"], .w3-text-blue{ color: #2369b0 !important; }
 [order_status="Cancelled"], .w3-text-red{ color: #d0021b !important; }
+[order_status$="Approved"], .w3-text-green{ color: #7ed321 !important; font-weight: bold; }
+[order_status="In Production"], .w3-text-green{ color: #4CAF50 !important; font-weight: bold; }
 
 .line_status{ text-transform: uppercase; font-weight: bold; border-radius: 2px; }
 
-.line_status[status^="Needs"]{
+.line_status[status^="Needs"], span[add_type="business"]{
   background-color: #f37900 !important;
 }
 
@@ -457,8 +470,33 @@ div ul li label{ display:inline !important; }
   background-color: #d0021b !important;
 }
 
-.line_status[status="Approved"]{
+.line_status[status="Approved"], span[add_type="residential"]{
   background-color: #7ed321 !important;
+}
+
+span[add_type^="{"]{ 
+  background-color: #d0021b !important; 
+  color: transparent; 
+  animation: blink 1s ease infinite; 
+  -webkit-animation: blink 1s ease infinite; 
+  animation: blink 1s ease infinite; 
+}
+span[add_type^="{"]::before{ 
+  content: "Set Address Type.";
+  position: absolute;
+  color: #fff;
+}
+
+@-webkit-keyframes blink{
+  0% { transform: scale(0.9,0.9); }
+  50% { transform: scale(1.1,1.1); }
+  100% { transform: scale(0.9,0.9); }
+}
+
+@keyframes blink{
+  0% { transform: scale(0.9,0.9); }
+  50% { transform: scale(1.1,1.1); }
+  100% { transform: scale(0.9,0.9); }
 }
 
 .w3-hover-light-grey:hover{
@@ -579,14 +617,20 @@ td.td-table-wrapper{ vertical-align: initial !important; padding: 0; position: r
   max-width: 25% !important;
 }
 
- #mfp-product-preview .mfp-content, #mfp-order-review .mfp-content, #mfp-order-edit .mfp-content{
+#mfp-product-preview .mfp-content, #mfp-order-edit .mfp-content{
   max-width: 1300px !important; 
   margin-top: 100px !important; 
   margin-bottom: 100px !important; 
 }
 
+#mfp-order-review .mfp-content{
+  max-width: 650px !important; 
+  margin-top: 100px !important; 
+  margin-bottom: 100px !important; 
+}
+
 .mfp-review-wrapper .mfp-content{
-  max-width: 1300px !important; 
+  max-width: 650px !important; 
   margin-top: 100px !important; 
   margin-bottom: 100px !important;
 }
@@ -623,6 +667,10 @@ td.td-table-wrapper{ vertical-align: initial !important; padding: 0; position: r
 
 .min-width-240{
   min-width: 240px !important;
+}
+
+.min-width-230{
+  min-width: 230px !important;
 }
 
 .min-width-200{
@@ -716,4 +764,32 @@ html, body{ overflow-x: hidden !important; }
 
 .overflow-hidden{
   overflow: hidden !important;
+}
+
+.header-bar__module.header-bar__message .btn small{
+  font-size:115% !important;
+}
+
+.header-bar__module.header-bar__message .btn{
+  background-color: transparent !important;
+  padding: 8px 8px !important;
+}
+
+img[alt="Foodservice Logos"], img[src*="Foodservice_logo"]{
+  background: #f6f6f6;
+}
+
+#header--logo.logo-fixed img{
+  object-fit: cover;
+  width: 50px;
+  height: 50px;
+  object-position: left;
+  /*transition: all 1s;*/
+}
+
+.header-search-fs.search-fixed{
+  position: fixed !important;
+  z-index: 101 !important;
+  right: 125px;
+  top: 56px;
 }
